Fixed bckg img not cover on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 :root {
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-  height: 100%;
   color: rgb(255, 255, 255);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,6 +14,8 @@
 }
 
 body {
+  min-height: 100vh;
+  margin: 0;
   background-image: url('./assets/bckgImg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
